[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/MainTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/YuseiMagic-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/MenuButtons.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]

[node name="Template" parent="." instance=ExtResource( 1 )]

[node name="UI" type="Node2D" parent="."]

[node name="Label" type="Label" parent="UI"]
margin_right = 414.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Tomopoly"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="Node2D" parent="UI"]
position = Vector2( 0, 500 )
script = ExtResource( 3 )

[node name="StartMenu" type="VBoxContainer" parent="UI/MenuButtons"]
margin_right = 576.0
margin_bottom = 203.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/MenuButtons/StartMenu"]
margin_right = 576.0
margin_bottom = 94.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Jugar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="UI/MenuButtons/StartMenu"]
margin_top = 98.0
margin_right = 576.0
margin_bottom = 192.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Creditos"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="UI/MenuButtons/StartMenu"]
margin_top = 196.0
margin_right = 576.0
margin_bottom = 290.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Salir"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UI/MenuButtons/StartMenu/Start" to="UI/MenuButtons" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/MenuButtons/StartMenu/Credits" to="UI/MenuButtons" method="_on_Credits_pressed"]
[connection signal="pressed" from="UI/MenuButtons/StartMenu/Exit" to="UI/MenuButtons" method="_on_Exit_pressed"]
